sql/test/error/error9.exp


select * from t1 union select * from t2;
       ^
       |
        ----- ERROR
Error: line 4, characters 8-8:
Incompatible types for union
